# liboizys

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  changelog.md  oizys.pc.in
.github/workflows/: build.yaml
cmake/: coverage.cmake
example/chat/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  messages.proto
example/chat/go/: .gitignore  create_protobuf.sh  go.mod  main.go
example/chat/python/: .gitignore  chat_client.py  create_protobuf.sh  requirements.txt
example/chat/rust/: Cargo.toml  build.rs  messages.proto
example/chat/rust/src/: main.rs
example/chat/zig/: .gitignore  build.zig  build.zig.zon  chat-client.zig
example/echo/: CMakeLists.txt  echo_client.cpp  echo_client.py  echo_server.cpp
example/echo/go/: main.go
example/echo/rust/: Cargo.toml
example/echo/rust/src/: main.rs
example/echo/zig/: echo-client.zig
example/notification/: CMakeLists.txt  notification_client.cpp  notification_client.py  notification_server.cpp
example/notification/go/: go.mod  main.go
example/notification/rust/: Cargo.toml
example/notification/rust/src/: main.rs
example/notification/zig/: notify-client.zig
inc/com/: accept_handler.hpp  api.hpp  com.hpp  context.hpp  context_i.hpp  listener_i.hpp  session_i.hpp
inc/com/unstable/: context.hpp
inc/oizys/: accept_handler.hpp  api.hpp  context.hpp  context_i.hpp  listener_i.hpp  oizys.hpp  session.hpp  session_i.hpp  version.hpp
inc/oizys/unstable/: context.hpp
proto/: messages.proto
src/: asio_borrowed_context.cpp  asio_borrowed_context.hpp  asio_context.cpp  asio_context.hpp  asio_listener.cpp  asio_listener.hpp  asio_session.cpp  asio_session.hpp  com_message.cpp  com_message.hpp  context.cpp  main.cpp  session.cpp  version.cpp
src/client/: main.cpp
src/com/: asio_borrowed_context.cpp  asio_context.cpp  asio_context.hpp  asio_listener.cpp  asio_session.cpp  asio_session.hpp  com_message.cpp  com_message.hpp  context.cpp
src/server/: chat_server.cpp  chat_server.hpp  chat_session.cpp  chat_session.hpp  main.cpp
test-src/: test_asio_borrowed_context.cpp  test_asio_context.cpp  test_asio_listener.cpp  test_asio_session.cpp  test_asio_session_read.cpp  test_asio_session_write.cpp  test_com_message.cpp  test_context.cpp  test_session.cpp  test_unstable_context.cpp  test_version.cpp
test-src/com/: test_asio_listener.cpp  test_asio_session.cpp  test_asio_session_read.cpp
